--- a/UniTarjeta/war/css/main.css
+++ b/UniTarjeta/war/css/main.css
@@ -163,6 +163,9 @@ ul.menuVert1 li:hover {
 #contenido > p {
     text-align: center;
 }
+.olvida{
+	text-align: center;
+}
 
 #contenido > p span {
     padding-left: 5px;
@@ -259,5 +262,22 @@ width:100x;
 
 img {
     margin-top: 9px;
+}
+
+/* ---------- contenido List ---------- */
+
+.exteriorList{
+    margin: auto;
+    padding: 1em;
+    width: 900px;
+	
+}
+
+#contenidoList {
+    width: 280px;
+    min-height: 100%;     
+    height: auto !important;     
+    height: 100%;     
+    margin: 0 auto 0px; 
 }
 
