--- a/UniTarjeta/war/css/main.css
+++ b/UniTarjeta/war/css/main.css
@@ -210,7 +210,7 @@ width:100x;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     background-color: #0A8FFB;
-    color: #808080;
+    color: #FCF9F9;
     font-weight: bold;
     margin-bottom: 2em;
     text-transform: uppercase;
@@ -279,5 +279,46 @@ img {
     height: auto !important;     
     height: 100%;     
     margin: 0 auto 0px; 
+}
+
+/* ---------- tarjeta ---------- */
+
+.tarjeta {
+  font-family: 'Ubuntu', 'Lato', sans-serif;
+  font-weight: 400;
+  width: 400px;
+  padding:20px;
+  position: relative;
+  margin: 60px auto 30px;
+  height: 260px;
+  overflow: hidden;
+  background: #04B9EF;
+  border-radius: 0.4em;
+  box-shadow: inset 0 0 2px 1px rgba(255,255,255,0.08), 0 16px 10px -8px rgba(0, 0, 0, 0.6);
+}
+
+#usuario{
+  position:relative;
+  left: 280px;
+  top: -70px;
+}
+
+#banco{
+  position: relative;
+  top: -20px;
+}
+}
+
+#uni{
+  position: relative;
+  left: -20px;
+  top: 80px;
+  
+}
+
+#chip{
+ position: relative;
+  right: 70px;
+  top: -30px;
 }
 
